<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">School Calendar</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_lesson">Add Lesson</string>
    <string name="action_add_subject">Add Subject</string>
    <string name="action_add_homework">Add Homework</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open_drawer_message">Open course categories</string>
    <string name="close_drawer_message">Close course categories</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login_button">Login</string>
    <string name="login_register_button">Register</string>
    <string name="login_show_password">Show password</string>

    <string name="home_name">Your daily schedule</string>
    <string name="home_lesson_type_string">Lesson type</string>
    <string name="home_lesson_room_string">Room</string>
    <string name="home_lesson_separator">-</string>
    <string name="home_loading_data">Loading&#8230;</string>
    <string name="home_no_room_string">No Room</string>

    <string name="all_subject_page_name">All Subjects</string>

    <string name="homework_page_name">All Homeworks</string>
    <string name="homework_days_left_string">Days left:</string>

    <string name="add_subject_page_name">Add new subject</string>
    <string name="add_subject_subject_name">Subject name</string>
    <string name="add_subject_teacher">Teacher</string>
    <string name="add_subject_color">Color</string>
    <string name="add_subject_create_button">Create</string>

    <string name="edit_subject_page_name">Edit subject</string>
    <string name="edit_subject_edit_button">Edit</string>

    <string name="add_homework_page_name">Add new homework</string>
    <string name="add_homework_subject">Choose subject</string>
    <string name="add_homework_submit_date">Submit date</string>
    <string name="add_homework_addbutton">Add homework</string>
    <string name="add_homework_addNewSubjectButton">Add new subject</string>

    <string name="edit_homework_page_name">Edit homework</string>
    <string name="edit_homework_edit_button">Edit</string>
    <string name="week_schedule_pageName">Week Schedule</string>
    <string name="add_lesson_page_name">Add new lesson</string>
    <string name="choose_subject_name">Choose subject</string>
    <string name="choose_lesson_type">Choose type</string>
    <string name="start_time">Start time</string>
    <string name="choose_day">Choose day</string>
    <string name="end_time">End time</string>
    <string name="add_lesson_button">Add</string><string name="room">Room</string><string name="note">Note</string>

</resources>
