<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddHomeworkActivity">

    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddHomeworkActivity">

        <!--
        This title strip will display the currently visible page title, as well as the page
        titles for adjacent pages.
        -->

        <android.support.v4.view.PagerTitleStrip
            android:id="@+id/pager_title_strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="#F0F0F0"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:textColor="#fff" />
    </android.support.v4.view.ViewPager>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add_homework_page_name"
            android:id="@+id/add_homework_pageName"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_row_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_row_margin"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="left">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView_updateFrequency"
                    android:layout_gravity="left|right"
                    android:text="@string/add_homework_subject"
                    android:layout_margin="@dimen/activity_all_margin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/add_homework_submit_date"
                    android:id="@+id/textView_measureUnits"
                    android:layout_gravity="left"
                    android:layout_margin="@dimen/activity_all_margin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="left">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right"
                    android:layout_gravity="right">

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/add_homework_spinner"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_homework_addNewSubjectButton"
                        android:id="@+id/add_homework_addNewSubjectButton"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin" />
                </LinearLayout>


                <DatePicker
                    android:id="@+id/add_homework_datepicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_homework_addbutton"
                    android:id="@+id/add_homework_addbutton"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>