<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddLessonActivity">

    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddLessonActivity">

        <!--
        This title strip will display the currently visible page title, as well as the page
        titles for adjacent pages.
        -->

        <android.support.v4.view.PagerTitleStrip
            android:id="@+id/pager_title_strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="#F0F0F0"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:textColor="#fff" />
    </android.support.v4.view.ViewPager>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add_lesson_page_name"
            android:id="@+id/add_lesson_pageName"
            android:gravity="center_horizontal" />

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ScrollView01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:importantForAccessibility="noHideDescendants">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/linearLayout">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignWithParentIfMissing="false"
                    android:id="@+id/linearLayout2"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textView"
                        android:text="@string/choose_subject_name"
                        android:layout_below="@+id/add_subject_color_spinner"
                        android:layout_toRightOf="@+id/subject_spinner"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/subject_spinner"
                        android:layout_alignParentTop="true"
                        android:layout_alignLeft="@+id/type_spinner"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linearLayout4"
                    android:layout_below="@+id/linearLayout2"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/choose_lesson_type"
                        android:id="@+id/textView1"
                        android:layout_below="@+id/textView_orderBy"
                        android:layout_alignParentLeft="true"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/type_spinner"
                        android:layout_alignBottom="@+id/add_subject_new_teacher"
                        android:layout_alignLeft="@+id/add_subject_new_teacher"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignWithParentIfMissing="false"
                    android:id="@+id/linearLayout3"
                    android:layout_below="@+id/linearLayout4"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textView2"
                        android:text="@string/choose_day"
                        android:layout_below="@+id/add_subject_color_spinner"
                        android:layout_toRightOf="@+id/day_spinner"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/day_spinner"
                        android:layout_alignParentTop="true"
                        android:layout_alignLeft="@+id/type_spinner"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignWithParentIfMissing="false"
                    android:id="@+id/linearLayout5"
                    android:layout_below="@+id/linearLayout3"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textView3"
                        android:text="@string/start_time"
                        android:layout_below="@+id/add_subject_color_spinner"
                        android:layout_toRightOf="@+id/spinner2"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

                    <TimePicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/start_time_picker"
                        android:layout_alignBottom="@+id/linearLayout3"
                        android:layout_alignRight="@+id/linearLayout2" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignWithParentIfMissing="false"
                    android:id="@+id/linearLayout6"
                    android:layout_below="@+id/linearLayout5"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textView4"
                        android:text="@string/end_time"
                        android:layout_below="@+id/add_subject_color_spinner"
                        android:layout_toRightOf="@+id/spinner2"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

                    <TimePicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/end_time_picker"
                        android:layout_alignBottom="@+id/linearLayout3"
                        android:layout_alignRight="@+id/linearLayout2" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignWithParentIfMissing="false"
                    android:id="@+id/linearLayout7"
                    android:layout_alignParentTop="false"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/linearLayout6">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textView5"
                        android:text="@string/room"
                        android:layout_below="@+id/add_subject_color_spinner"
                        android:layout_toRightOf="@+id/spinner2"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/room"
                        android:layout_weight="1"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignWithParentIfMissing="false"
                    android:id="@+id/linearLayout8"
                    android:layout_alignParentTop="false"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/linearLayout7" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textView6"
                        android:text="@string/note"
                        android:layout_below="@+id/add_subject_color_spinner"
                        android:layout_toRightOf="@+id/spinner2"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/note"
                        android:layout_weight="1"
                        android:inputType="textMultiLine" />
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_lesson_button"
                    android:id="@+id/add_lesson_button"
                    android:layout_alignParentBottom="false"
                    android:layout_below="@+id/linearLayout8"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="false"
                    android:width="200dp" />

            </RelativeLayout>
        </ScrollView>

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>